# fastapi_sendbox

./: .gitignore  aggiornamenti.sql  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 2022-10-06-12-38_1472b4ef95cd.py  2022-11-02-16-39_b8318f11723b.py  2022-11-02-16-51_f6f0843ad377.py  2022-11-02-17-15_e3174b6be9e0.py  2022-11-02-17-20_31e4fec2b052.py  2022-11-02-17-26_d75a2700dfac.py  2022-11-03-10-01_c8c15321bb27.py  2022-11-03-10-52_9089dc1ef2f7.py  2022-11-03-12-00_0884c91eef62.py  2022-11-03-12-18_93acbd1e3be7.py  2022-11-03-12-26_1915894141ca.py  2022-11-03-12-36_a5a534ac8d35.py  2022-11-03-15-52_d5f04bf474bb.py  2022-11-04-16-02_1a28f36f4959.py  2022-11-04-17-06_9dd221324bf6.py  2022-11-04-17-44_422892ab6680.py  2022-11-04-17-46_54d9e95774a2.py  2022-11-04-17-46_dcf6cfdaa2b3.py  2022-11-04-17-48_386bdc605229.py  2022-11-04-17-48_d9e0395dd00d.py  2022-11-05-11-14_90b8c0c6a726.py  2022-11-07-10-44_e7031677f289.py  2022-11-07-11-01_5acc9346f50b.py  2022-11-07-11-02_471f2aa007cd.py  2022-11-07-11-02_89b1dcf51502.py  2022-11-07-11-27_0db45971d7fb.py  2022-11-07-11-27_e06e6c36bab4.py  2022-11-07-11-28_aced360c2dcc.py  2022-11-07-11-34_8a5922c75a93.py  2022-11-07-11-35_613383000a75.py  2022-11-07-11-46_6d1bc12d31c8.py  2022-11-08-09-18_c8883bcaac9e.py  2022-11-08-09-52_271d342bb541.py  2022-11-08-10-05_1d1c42cb28f5.py  2022-11-08-10-46_56413fb0c716.py  2022-11-08-14-44_7a9c7d7e17f1.py  2022-11-08-15-22_6dd658cfb524.py  2022-11-08-16-37_ebf05496ade0.py  2022-11-08-16-45_2599e923f4c3.py  (+10 more)
app/: initial_data.py  pippo.py
app/api/: deps.py
(+83 files in other folders)
